--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -20,7 +20,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="manifest.json" />
+    <!-- <link rel="manifest" href="manifest.json" /> -->
 
 
     <!-- new---------------------------------------------------------------------- -->
@@ -90,7 +90,7 @@
     <div id="root"></div>
 
   <!-- Vendor JS Files -->
-<script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
   <!-- <script src="/assets/vendor/apexcharts/apexcharts.min.js"></script> -->
   <!-- <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="/assets/vendor/chart.js/chart.umd.js"></script>
