--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -9,7 +9,7 @@
     content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="logo192.png" />
-  <link rel="manifest" href="manifest.json" />
+  <!-- <link rel="manifest" href="manifest.json" /> -->
 
   <!-- Vendor CSS Files -->
   <link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -23,7 +23,7 @@
   <div id="root"></div>
 
   <!-- Vendor JS Files -->
-  <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
 
 </body>
 
