--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -23,7 +23,7 @@
   <div id="root"></div>
 
   <!-- Vendor JS Files -->
-  <!-- <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
+  <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
