--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8" />
-  <link rel="icon" href="favicon.ico" />
+  <link rel="icon" href="/assets/img/shopping.png" />
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -15,7 +15,7 @@
 
   <!-- Template Main CSS File -->
   <link href="/assets/css/style.css" rel="stylesheet">
-  <title>React App</title>
+  <title>Prime Mart</title>
 
 </head>
 
